<resources>
    <string name="app_name">HomeBudgetApplication</string>
    <string name="addNew">addNew</string>
    <string name="delete">Delete</string>
    <string name="main_title">Home Budget App</string>
    <string name="statistics_year">Yearly statistics:</string>
    <string name="statistics_months">. monthly statistics</string>
    <string name="sum_income">"Summed Income: "</string>
    <string name="sum_spending">"Summed Spending: "</string>
    <string name="diff">"Difference: "</string>
    <string name="title_transaction">Manage Transactions</string>
    <string name="transaction_edit_name_error">Valid item name is required!</string>
    <string name="transaction_edit_value_error">Valid value is required!</string>
    <string name="snackbar_tipp">Fill all the information.</string>
    <string name="signup_name_error">name already in use</string>
    <string name="signup_name_too_short">at least 4 characters</string>
    <string name="signup_password_error">between 4 and 10 characters</string>
    <string name="signup_error">Signup failed</string>
    <string name="signup_creating_account">Creating Account...</string>
    <string name="title_signup">Sign Up</string>
    <string name="title_selector">Selector</string>
    <string name="title_login">Login</string>
    <string name="login_auth">Authenticating...</string>
    <string name="login_fail">Login failed</string>
    <string name="login_username_error">enter a valid user name between 4 and 10 characters</string>
    <string name="login_password_error">between 4 and 10 characters</string>
    <string name="item_edit_name_error">Valid item name is required!</string>
    <string name="item_edit_value_error">Valid value is required!</string>
    <string name="title_item">Manage Items</string>
    <string name="title_category">Manage categories</string>
    <string name="category_edit_name_error">Valid category name is required!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="add_spending">Add Spending</string>
    <string name="add_income">Add Income</string>
    <string name="statistics">Monthly Statistics</string>
    <string name="categories">Categories</string>
    <string name="manage_items">Manage Items</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="category_name">Category name</string>
    <string name="save">Save</string>
    <string name="ok">Ok</string>
    <string name="item_name">Item name</string>
    <string name="item_value">Item Value</string>
    <string name="category">Category</string>
    <string name="income">Income</string>
</resources>
